--- a/appointa/index.html
+++ b/appointa/index.html
@@ -489,10 +489,9 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
+
                 <p class="specialText colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63;
                   &nbsp; How&#63; &nbsp; </p>
-                <p class="specialTextS colorAPPOINTAYellow u-textCenter">"What are the types of situations that are most likely to spend longer time scheduling an interview"</p>
-
               </div>
             </div>
           </div>
@@ -581,6 +580,17 @@
               </div>
             </div>
 
+          </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"Discover the opportunity to improve the interview scheduling experience for recruiting team"
+                  </p>
+
+                </div>
+              </div>
+            </div>
           </div>
           <div class="blankHXS"></div>
         </div>
@@ -801,9 +811,13 @@
                   <img class="modal-target" src="diagram_empathyMap.svg" alt="Pain points">
                 </div>
               </div>
+
+ 
+              
             </div>
           </div>
         </div>
+
       </section>
       <div class="blankHS"></div>
 
@@ -882,44 +896,37 @@
                 <h4 class="">
 
                   <p>The reason why scheduling is time consuming:</p>
-                  <ul>
-                    <li>Reach out and get availability from the candidate </li>
-                    <li>Find an eligible interviewer from an interview pool, check availability
-                    </li>
-                    <li>
-                      Match availability between qualified candidate and eligible interviewer
-                    </li>
-                    <li>
-                      Easy to make mistakes, companies have to hire recruiter coordinators to make
-                      sure candidates won't have a bad experience
-                    </li>
-                    <li>When booking an onsite interview, it is a huge
-                      challenge to find a group of people available at the same time
 
-                    </li>
-                  </ul>
                   <img class="" src="Diagram_2.svg" alt="Diagram">
                 </h4>
               </div>
-
               <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                 <h4 class="">
                   <p>The recruitment app and scheduling app currently they are using are not very
                     efficient for scheduling job interviews</p>
                   <p> The existing tools such as Greenhouse and Calendly
-                    schedule for <strong class="textDecor APPOINTA">a specific
-                      interviewer</strong>.
+                    schedule for a specific interviewer.
                     Most time, finding an interviewer from an interview pool is unnecessary
-                    because it
-                    is a uniform predetermined interview. </p>
+                    because it is a uniform predetermined interview. </p>
                 </h4>
               </div>
+  
             </div>
 
           </div>
         </div>
 
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"On average, recruiters are spending two-thirds of their overall hiring time on the interview process. "
+                </p>
 
+              </div>
+            </div>
+          </div>
+        </div>
 
 
       </section>
@@ -1022,6 +1029,16 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"How might we provide a better scheduling experience for the recruiting team and candidates?  </p>
+  
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
