--- a/appointa/index.html
+++ b/appointa/index.html
@@ -585,7 +585,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"Discover the opportunity to improve the interview scheduling experience for recruiting team"
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"Discover the
+                    opportunity to improve the interview scheduling experience for recruiting team"
                   </p>
 
                 </div>
@@ -812,8 +813,8 @@
                 </div>
               </div>
 
- 
-              
+
+
             </div>
           </div>
         </div>
@@ -910,7 +911,7 @@
                     because it is a uniform predetermined interview. </p>
                 </h4>
               </div>
-  
+
             </div>
 
           </div>
@@ -920,7 +921,8 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"On average, recruiters are spending two-thirds of their overall hiring time on the interview process. "
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"On average, recruiters
+                  are spending two-thirds of their overall hiring time on the interview process. "
                 </p>
 
               </div>
@@ -1033,8 +1035,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"How might we provide a better scheduling experience for the recruiting team and candidates?  </p>
-  
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"How might we provide a
+                    better scheduling experience for the recruiting team and candidates?"</p>
                 </div>
               </div>
             </div>
@@ -1101,13 +1103,13 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="iconClock.svg" alt="se-arrow">
+                    <img class="iconM" src="IconCalendarSearch.svg" alt="se-arrow">
                     <div class="blankHXS"></div>
                     <h4> <strong> Efficiency</strong> </h4>
 
                     <ul>
-                      <li> Team availability in one place</li>
-                      <li> Pick available member automatically</li>
+                      <li> Be able to share availability without spending time and effort</li>
+                      <li> Let each individual manage their own schedule</li>
                     </ul>
                   </div>
                 </div>
@@ -1115,16 +1117,15 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="iconAdd-square.svg" alt="se-arrow">
+                    <img class="iconM" src="iconShare.svg" alt="se-arrow">
 
                     <div class="blankHXS"></div>
 
                     <h4> <strong> Collaboration</strong> </h4>
 
                     <ul>
-                      <li> Invite team members</li>
-                      <li>Sync and share availability</li>
-                      <li>Working hours & time zone</li>
+                      <li>Recruiter easy to collaborates with his team and candidates</li>
+                      <li>Easy to share information such as availability, skills, time zone with the team</li>
                     </ul>
                   </div>
                 </div>
@@ -1137,8 +1138,8 @@
                     <div class="blankHXS"></div>
                     <h4> <strong> Optimization</strong> </h4>
                     <ul>
-                      <li>Interview skills</li>
-                      <li>Interview types</li>
+                      <li>Optimize the availability for a better scheduling experience</li>
+                      <li>Handle the recruiting team's specific needs</li>
 
                     </ul>
                   </div>
@@ -1149,12 +1150,12 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="iconShare.svg" alt="se-arrow">
+                    <img class="iconM" src="iconClock.svg" alt="se-arrow">
                     <div class="blankHXS"></div>
                     <h4> <strong> Time-saving</strong> </h4>
                     <ul>
-                      <li> Match appointment requirements automatically</li>
-                      <li> Schedule interviews base on availability and interview hours</li>
+                      <li> Finding availability should be easy</li>
+                      <li> Let the recruiter focus on finding talents not scheduling</li>
                     </ul>
                   </div>
                 </div>
@@ -1162,14 +1163,14 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardAPPOINTA heightM">
-                    <img class="iconM" src="iconNotification.svg" alt="se-arrow">
+                    <img class="iconM" src="IconCalendar.svg" alt="se-arrow">
 
                     <div class="blankHXS"></div>
 
                     <h4> <strong> Flexibility</strong> </h4>
                     <ul>
-                      <li> Everyone deal with appointment on their own</li>
-                      <li> Both parties can book interviews</li>
+                      <li> Everyone deals with appointment on their own</li>
+                      <li> Each party deal with their schedule</li>
 
                     </ul>
                   </div>
@@ -1183,7 +1184,9 @@
 
                     <h4> <strong> Effectiveness</strong> </h4>
                     <ul>
-                      <li>Reminders</li>
+                      <li>Be simple and easy to use</li>
+                      <li>Be straightforward</li>
+
                     </ul>
                   </div>
                 </div>
