--- a/seer/index.html
+++ b/seer/index.html
@@ -325,19 +325,17 @@
             <li class=""><a href="#interview">Interview &#38; Affinity Mapping </a></li>
           </ul>
         </li>
-        <li><a href="#findings">Research &#38; Findings</a>
+        <li><a href="#findings">Insights</a>
           <ul>
             <li class=""><a href="#userJourney">User journey</a></li>
             <li class=""><a href="#RedditAPI">Reddit API </a></li>
           </ul>
         </li>
 
-        <li class=""><a href="#ideation">Initial concepts </a></li>
-
-
-
-        <li><a href="#proposal">Design, test, iterate </a>
+        <li class=""><a href="#ideation">Ideation </a>
           <ul>
+            <li class=""><a href="#InitiaConcepts">Initia concepts</a></li>
+
             <li class=""><a href="#wireframes">Wireframes</a></li>
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
             <li class=""><a href="#testing">Usability testing </a></li>
@@ -346,8 +344,8 @@
           </ul>
         </li>
 
-        <li><a href="#solution">Final solution </a></li>
-        <li><a href="#takeaways">Takeaways </a></li>
+        <li><a href="#solution">Prototypes </a></li>
+        <li><a href="#takeaways">Outcomes </a></li>
       </ol>
     </nav>
 
@@ -378,6 +376,11 @@
           </div>
         </div>
         <!-- Arrow -->
+
+
+
+
+        
         <!-- Opportunity and use cases -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
@@ -751,156 +754,159 @@
     </section>
 
 
-    <section id="ideation">
 
-
-
-      <div class="elementSeerDivider"></div>
-
-      <!-- Arrow -->
-
-      <div class="BGseer1_1">
-        <div class="blankHS"></div>
-
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow"> Initial concepts</p>
-                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Arrow -->
-
-
-        <div class="blankHS"></div>
-
-        <!-- Product / Features -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--cols-3">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_CurrentState.svg" alt="icon">
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Create keywords </strong> </h5>
-                    <ul>
-                      <li> Create keywords</li>
-                      <li> Save keywords </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Alert.svg" alt="icon">
-
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Notification </strong> </h5>
-                    <ul>
-                      <li> Keywords notification setting</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Compare.svg" alt="icon">
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Data Comparison </strong> </h5>
-                    <ul>
-                      <li> Save results</li>
-                      <li> Compare result side by side</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--cols-3">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Chart.svg" alt="icon">
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Dashboard </strong> </h5>
-                    <ul>
-                      <li> Table - </li>
-                      <li> Pie Charts - </li>
-                      <li>Line Graphs - time and change</li>
-                      <li>Bar Charts</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Data.svg" alt="icon">
-                    <div class="blankHXS"></div>
-                    <h5> <strong>Data explore/drill down </strong> </h5>
-                    <ul>
-                      <li> From overall data view to the details</li>
-                      <li> Filter the data to get more details</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Download.svg" alt="icon">
-
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Export Data </strong> </h5>
-                    <ul>
-                      <li> Export data share with team</li>
-
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Product / Features -->
-        <div class="blankHM"></div>
-
-      </div>
-    </section>
 
     <div class="blankHXS"></div>
 
-    <section id="proposal">
+    <section id="ideation">
 
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Design, test, iterate</span><img
+          <h1 class="Grid Grid--center"> <span>Ideation</span><img
               class="moveUpDown widthLogo" src="../icon/icon_Redesign.svg" alt="Redesign">
           </h1>
         </div>
       </div>
+      <section id="InitiaConcepts">
+
+
+
+        <div class="elementSeerDivider"></div>
+  
+        <!-- Arrow -->
+  
+        <div class="BGseer1_1">
+          <div class="blankHS"></div>
+  
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Initial concepts</p>
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+  
+  
+          <div class="blankHS"></div>
+  
+          <!-- Product / Features -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-3">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Create keywords </strong> </h5>
+                      <ul>
+                        <li> Create keywords</li>
+                        <li> Save keywords </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+  
+  
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+  
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Alert.svg" alt="icon">
+  
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Notification </strong> </h5>
+                      <ul>
+                        <li> Keywords notification setting</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Compare.svg" alt="icon">
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Data Comparison </strong> </h5>
+                      <ul>
+                        <li> Save results</li>
+                        <li> Compare result side by side</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-3">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Chart.svg" alt="icon">
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Dashboard </strong> </h5>
+                      <ul>
+                        <li> Table - </li>
+                        <li> Pie Charts - </li>
+                        <li>Line Graphs - time and change</li>
+                        <li>Bar Charts</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Data.svg" alt="icon">
+                      <div class="blankHXS"></div>
+                      <h5> <strong>Data explore/drill down </strong> </h5>
+                      <ul>
+                        <li> From overall data view to the details</li>
+                        <li> Filter the data to get more details</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Download.svg" alt="icon">
+  
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Export Data </strong> </h5>
+                      <ul>
+                        <li> Export data share with team</li>
+  
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Product / Features -->
+          <div class="blankHM"></div>
+  
+        </div>
+      </section>
+
+
       <section id="wireframes">
         <!-- Arrow -->
         <div class="wrapper">
