--- a/seer/index.html
+++ b/seer/index.html
@@ -161,8 +161,8 @@
         <div class="Grid Grid--gutters Grid--cols-4 Grid--top">
           <div class="Grid-cell">
             <div class="element">
-              <h5 class=""><strong class="">Duration:</strong> June -
-                August 2022</h5>
+              <h5 class=""><strong class="">Duration:</strong> August -
+                October 2022</h5>
             </div>
           </div>
           <div class="Grid-cell">
@@ -196,8 +196,8 @@
         <div class="elementInner">
 
           <h3><strong>Challenge</strong></h3>
-          <h4>Business owners want to know the engagement and sentiment of people. Reddit is the
-            platform where people comes to discuss product and brands.
+          <h4>Business owners want to know the engagement and sentiment of people on Reddit in order
+            to grow their business.
           </h4>
 
         </div>
@@ -208,12 +208,10 @@
 
         <div class="elementInner">
 
-          <h3><strong>Hypothesis</strong></h3>
+          <h3><strong>Goal</strong></h3>
 
-          <h4>If there is a keywords analysis tool with a sentiment score for Reddit.
-          </h4>
-          <h4>It will help the business owner understand how their customer feels about their brand.
-          </h4>
+          <h4>A simple and easy way to track sentiment and the amount of traffic with keywords
+            easily over time on Reddit </h4>
 
         </div>
       </div>
@@ -297,7 +295,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <img class="" src="diagramDesignThinking.svg" alt="se-arrow">
+            <img class="" src="diagram_designThinking.svg" alt="Design think process">
 
           </div>
         </div>
@@ -307,7 +305,37 @@
 
 
   <div class="blankHM"></div>
+  <!-- Arrow -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow"> Timeline</p>
+            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Arrow -->
 
+  <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <img class="" src="diagram_timeline.svg" alt="Timeline">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="blankHM"></div>
 
 
 
@@ -361,7 +389,91 @@
       <div class="blankHXS"></div>
 
       <section id="overview" class="">
+        <div class="BGseer2_1">
+          <div class="blankHS"></div>
 
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Research objective</p>
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardBG">
+                  <h6> <strong class="colorSEER"> Problem statement </strong> </h6>
+                  <h4> Business owners want to know the engagement and sentiment of people on Reddit
+                    in order to grow their business</h4>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-3">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardBG">
+                    <h6> <strong class="colorSEER"> Objective 1 </strong> </h6>
+                    <h4> Understand the end-to-end process of how businesses are currently analysis
+                      process on Reddit</h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Think about the last time you track sentiment, walk me through your process
+                    </h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Explain how you felt during that process</h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Talk to me about what other factors influenced your decision</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardBG">
+                    <h6> <strong class="colorSEER"> Objective 2 </strong> </h6>
+                    <h4> Identify any problems or barriers they encounter when finding data on Reddit</h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Describe the last time you had a problem when finding information on Reddit
+                    </h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Were you able to solve the problem? What did you do to try to solve the problem?</h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> How would you improve or change the situation?</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardBG">
+                    <h6> <strong class="colorSEER"> Objective 3 </strong> </h6>
+                    <h4>Uncover the different tools businesses use to understand customers’ sentiment</h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Talk me through the different tools you used while tracking business sentiment
+                    </h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Describe your experience with these different tools</h4>
+                    <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
+                    <h4> Compare the different experiences you had with the tools or talk about any tools you’ve heard of and haven’t used</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="blankHS"></div>
+        </div>
+
+        <div class="blankHM"></div>
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -380,7 +492,7 @@
 
 
 
-        
+
         <!-- Opportunity and use cases -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
@@ -401,8 +513,7 @@
                     For example, a ccompany wants to know how people feel about a new feature
                     launched, or a new item released. They also want to understand the positive and
                     negative experiences with the brand and products. understand the reason based on
-                    a
-                    bunch of data.
+                    a bunch of data.
                   </p>
 
 
@@ -664,7 +775,7 @@
 
 
         <div class="wrapper">
-          <div class="Grid Grid--full u-textCenter ">
+          <div class="Grid Grid--full u-textCenter">
 
             <div class="Grid-cell">
               <div class="element">
@@ -762,8 +873,8 @@
 
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Ideation</span><img
-              class="moveUpDown widthLogo" src="../icon/icon_Redesign.svg" alt="Redesign">
+          <h1 class="Grid Grid--center"> <span>Ideation</span><img class="moveUpDown widthLogo"
+              src="../icon/icon_Redesign.svg" alt="Redesign">
           </h1>
         </div>
       </div>
@@ -772,12 +883,12 @@
 
 
         <div class="elementSeerDivider"></div>
-  
+
         <!-- Arrow -->
-  
+
         <div class="BGseer1_1">
           <div class="blankHS"></div>
-  
+
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
               <div class="Grid-cell">
@@ -791,10 +902,10 @@
             </div>
           </div>
           <!-- Arrow -->
-  
-  
+
+
           <div class="blankHS"></div>
-  
+
           <!-- Product / Features -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--cols-3">
@@ -812,16 +923,16 @@
                     </div>
                   </div>
                 </div>
-  
-  
+
+
               </div>
               <div class="Grid-cell">
                 <div class="element">
-  
+
                   <div class="elementSEER">
                     <div class="elementInnerSEER heightM">
                       <img class="iconM" src="icon_Alert.svg" alt="icon">
-  
+
                       <div class="blankHXS"></div>
                       <h5> <strong> Notification </strong> </h5>
                       <ul>
@@ -887,12 +998,12 @@
                   <div class="elementSEER">
                     <div class="elementInnerSEER heightM">
                       <img class="iconM" src="icon_Download.svg" alt="icon">
-  
+
                       <div class="blankHXS"></div>
                       <h5> <strong> Export Data </strong> </h5>
                       <ul>
                         <li> Export data share with team</li>
-  
+
                       </ul>
                     </div>
                   </div>
@@ -902,7 +1013,7 @@
           </div>
           <!-- Product / Features -->
           <div class="blankHM"></div>
-  
+
         </div>
       </section>
 
