--- a/seer/index.html
+++ b/seer/index.html
@@ -381,7 +381,7 @@
     <section id="research" class="">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>User research</span><img class="moveUpDown widthLogo"
+          <h1 class="Grid Grid--center"> <span>Research</span><img class="moveUpDown widthLogo"
               src="../icon/icon_research.svg" alt="Redesign">
           </h1>
         </div>
@@ -469,7 +469,17 @@
             </div>
           </div>
 
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextXS colorSEEROrange u-textCenter">&#8220; Understanding the problem and opportunities for businesses search and track customer sentiment on Reddit &#8221;
+                  </p>
 
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="blankHS"></div>
         </div>
 
