--- a/seer/index.html
+++ b/seer/index.html
@@ -440,12 +440,14 @@
                 <div class="element">
                   <div class="elementInner cardBG">
                     <h6> <strong class="colorSEER"> Objective 2 </strong> </h6>
-                    <h4> Identify any problems or barriers they encounter when finding data on Reddit</h4>
+                    <h4> Identify any problems or barriers they encounter when finding data on
+                      Reddit</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
                     <h4> Describe the last time you had a problem when finding information on Reddit
                     </h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
-                    <h4> Were you able to solve the problem? What did you do to try to solve the problem?</h4>
+                    <h4> Were you able to solve the problem? What did you do to try to solve the
+                      problem?</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
                     <h4> How would you improve or change the situation?</h4>
                   </div>
@@ -455,14 +457,17 @@
                 <div class="element">
                   <div class="elementInner cardBG">
                     <h6> <strong class="colorSEER"> Objective 3 </strong> </h6>
-                    <h4>Uncover the different tools businesses use to understand customers’ sentiment</h4>
+                    <h4>Uncover the different tools businesses use to understand customers’
+                      sentiment</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
-                    <h4> Talk me through the different tools you used while tracking business sentiment
+                    <h4> Talk me through the different tools you used while tracking business
+                      sentiment
                     </h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
                     <h4> Describe your experience with these different tools</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
-                    <h4> Compare the different experiences you had with the tools or talk about any tools you’ve heard of and haven’t used</h4>
+                    <h4> Compare the different experiences you had with the tools or talk about any
+                      tools you’ve heard of and haven’t used</h4>
                   </div>
                 </div>
               </div>
@@ -473,7 +478,9 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorSEEROrange u-textCenter">&#8220; Understanding the problem and opportunities for businesses search and track customer sentiment on Reddit &#8221;
+                  <p class="specialTextXS colorSEEROrange u-textCenter">&#8220; Understanding the
+                    problem and opportunities for businesses search and track customer sentiment on
+                    Reddit &#8221;
                   </p>
 
                 </div>
