--- a/seer/index.html
+++ b/seer/index.html
@@ -424,7 +424,8 @@
                 <div class="element">
                   <div class="elementInner cardBG">
                     <h6> <strong class="colorSEER"> Objective 1 </strong> </h6>
-                    <h4> Understand the end-to-end process of how businesses are currently analysis
+                    <h4> Understand the <strong>end-to-end process</strong> of how businesses are
+                      currently analysis
                       process on Reddit</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
                     <h4> Think about the last time you track sentiment, walk me through your process
@@ -436,12 +437,13 @@
                   </div>
                 </div>
               </div>
+
               <div class="Grid-cell">
                 <div class="element">
                   <div class="elementInner cardBG">
                     <h6> <strong class="colorSEER"> Objective 2 </strong> </h6>
-                    <h4> Identify any problems or barriers they encounter when finding data on
-                      Reddit</h4>
+                    <h4> Identify any<strong>problems or barriers</strong> they encounter when
+                      finding data on Reddit</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
                     <h4> Describe the last time you had a problem when finding information on Reddit
                     </h4>
@@ -457,7 +459,7 @@
                 <div class="element">
                   <div class="elementInner cardBG">
                     <h6> <strong class="colorSEER"> Objective 3 </strong> </h6>
-                    <h4>Uncover the different tools businesses use to understand customers’
+                    <h4>Uncover the different <strong>tools businesses use</strong> to understand customers’
                       sentiment</h4>
                     <h6> <strong class="colorSEER"> Research question&#58; </strong> </h6>
                     <h4> Talk me through the different tools you used while tracking business
