--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1434,7 +1434,9 @@
             <div class="Grid-cell">
               <div class="element">
 
-                <img class="modal-target" src="diagram_keyFlows.svg" alt="user flow">
+                <img class="modal-target" src="diagram_keyFlows_team.svg" alt="user flow">
+                <img class="modal-target" src="diagram_keyFlows_scheduling.svg" alt="user flow">
+
               </div>
             </div>
 
