--- a/appointa/index.html
+++ b/appointa/index.html
@@ -500,87 +500,83 @@
 
         <!-- insights -->
         <div class="wrapper">
+          <!-- key pain points -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
 
-          <div class="Grid Grid--gutters Grid--cols-2">
+                    <div class="blankHXS"></div>
+                    <h4> <strong> Challenges of scheduling</strong> </h4>
+                    <ul>
+                      <li>What are the challenges of scheduling job interviews?</li>
+                      <li>When did the problem occur?</li>
 
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementInner cardAPPOINTA heightXS">
-                  <div class="Grid-cell">
-                    <div class="Grid Grid--gutters Grid--1of6">
-                      <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
-                          alt="se-arrow">
-                      </div>
-                      <div class="Grid-cell">
-                        <h4>What are the <strong>challenges of scheduling</strong> job interviews?
-                          When did the problem occur? </h4>
-                      </div>
-                    </div>
+                    </ul>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementInner cardAPPOINTA heightXS">
-                  <div class="Grid-cell">
-                    <div class="Grid Grid--gutters Grid--1of6">
-                      <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
-                          alt="se-arrow">
-                      </div>
-                      <div class="Grid-cell">
-                        <h4>What are the types of situations that are most likely to <strong>spend
-                            longer time</strong> scheduling an interview?
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
 
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="Grid Grid--gutters Grid--cols-2">
-            <div class="Grid-cell ">
-              <div class="element ">
-                <div class="elementInner cardAPPOINTA heightXS">
-                  <div class="Grid-cell">
-                    <div class="Grid Grid--gutters Grid--1of6">
-                      <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
-                          alt="se-arrow">
-                      </div>
-                      <div class="Grid-cell">
-                        <h4>What <strong>tools/methods</strong> are successful in scheduling job
-                          interviews, why do you need them?
-                        </h4>
-                      </div>
-                    </div>
+                    <div class="blankHXS"></div>
+
+                    <h4> <strong> Taking longer to schedule</strong> </h4>
+
+                    <ul>
+                      <li>
+                        What are the types of situations that are most likely to spend longer time
+                        scheduling an interview?</li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="Grid-cell ">
-              <div class="element ">
-                <div class="elementInner cardAPPOINTA heightXS">
-                  <div class="Grid-cell">
-                    <div class="Grid Grid--gutters Grid--1of6">
-                      <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
-                          alt="se-arrow">
-                      </div>
-                      <div class="Grid-cell">
-                        <h4> How do the scheduling tools <strong>help</strong> the recruiters and
-                          recruiting coordinators to
-                          schedule job interviews for both interviewers and interviewees?
-                        </h4>
-                      </div>
-                    </div>
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
+
+                    <div class="blankHXS"></div>
+                    <h4> <strong> Tools/methods</strong> </h4>
+                    <ul>
+                      <li>What tools/methods are successful in scheduling job interviews, why do you
+                        need them?</li>
+                      <li>
+                        How do the scheduling tools help the recruiters to schedule job interviews?
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInner cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
+
+                    <div class="blankHXS"></div>
+
+                    <h4> <strong> Improvement/wishlist</strong> </h4>
+
+                    <ul>
+                      <li>
+                        Is there anything you wish you could do with these products which is
+                        currently not possible?</li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
 
           </div>
+
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
@@ -612,11 +608,62 @@
           </div>
         </div>
         <!-- Arrow -->
+        <div class="blankHS"></div>
 
+        <!-- key pain points -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-3">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardAPPOINTA heightM">
+                  <img class="iconM" src="IconCalendarSearch.svg" alt="se-arrow">
+                  <div class="blankHXS"></div>
+                  <h4> <strong> Find availabilities</strong> </h4>
+
+                  <ul>
+                    <li> Find a time that works for everyone</li>
+                    <li> Trying to schedule around people's busy schedules </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardAPPOINTA heightM">
+                  <img class="iconM" src="IconCalendar.svg" alt="se-arrow">
+
+                  <div class="blankHXS"></div>
+                  <h4> <strong> Aware of the schedule</strong> </h4>
+                  <ul>
+                    <li>Keeping track of all the different scheduling requests </li>
+                    <li>Making sure everyone is aware of the schedule</li>
+
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardAPPOINTA heightM">
+                  <img class="iconM" src="IconCollaboration.svg" alt="se-arrow">
+
+                  <div class="blankHXS"></div>
+
+                  <h4> <strong> Collaborate with people</strong> </h4>
+
+                  <ul>
+                    <li>Schedule around people's busy schedules</li>
+                    <li>Coordinate with multiple people</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- key pain points -->
 
         <div class="wrapper">
-
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -1125,7 +1172,8 @@
 
                     <ul>
                       <li>Recruiter easy to collaborates with his team and candidates</li>
-                      <li>Easy to share information such as availability, skills, time zone with the team</li>
+                      <li>Easy to share information such as availability, skills, time zone with the
+                        team</li>
                     </ul>
                   </div>
                 </div>
