--- a/appointa/index.html
+++ b/appointa/index.html
@@ -968,8 +968,8 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"On average, recruiters
-                  are spending two-thirds of their overall hiring time on the interview process. "
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;On average, recruiters
+                  are spending two-thirds of their overall hiring time on the interview process.&#8221;
                 </p>
 
               </div>
@@ -1304,6 +1304,17 @@
             </div>
           </div>
           <div class="blankHS"></div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current understanding, the most important function of this recruiting scheduling app would be to have a way for users to easily schedule and track their interviews on their own.&#8221;
+                  </p>
+  
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
 
@@ -1404,7 +1415,7 @@
                         <ul>
                           <li> Share availability by connecting calendar </li>
                           <li> Connect to video conference account</li>
-                          <li> Pass interview to another team member</li>
+                          <li> Manage interviews</li>
                         </ul>
                       </div>
                     </div>
