--- a/appointa/index.html
+++ b/appointa/index.html
@@ -380,7 +380,7 @@
           <ul>
             <li class=""><a href="#research">Research goals </a></li>
             <li class=""><a href="#insights">Interview insights </a></li>
-            <li class=""><a href="#empathyMap"> Empathy map </a></li>
+            <li class=""><a href="#empathyMap">Empathy map </a></li>
             <li class=""><a href="#personas">Personas </a></li>
             <li class=""><a href="#customerJoutney">Customer journey map </a></li>
           </ul>
@@ -402,10 +402,11 @@
           <ul>
             <li class=""><a href="#useTypes">3 Persona Types</a></li>
 
-            <li class=""><a href="#informationArchitecture">information architecture</a></li>
 
             <li class=""><a href="#userFlow">User flow </a></li>
-            <li class=""><a href="#wireframes">Lo-fi wireframes</a></li>
+            <li class=""><a href="#informationArchitecture">information architecture</a></li>
+
+            <li class=""><a href="#wireframes">Lo-fi sketch</a></li>
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow &#38; testing </a></li>
           </ul>
         </li>
@@ -1308,7 +1309,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current understanding, the most important function of this recruiting scheduling app would be to have a way for users to easily schedule and track their interviews on their own.&#8221;
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current research, the most important function of this recruiting scheduling app would be to have a way for users to easily schedule and track their interviews on their own.&#8221;
                   </p>
   
                 </div>
@@ -1444,34 +1445,7 @@
         <!-- uses cases -->
       </section>
 
-      <section id="informationArchitecture">
 
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow"> Information architecture</p>
-                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Arrow -->
-        <div class="blankHS"></div>
-        <!-- Sitemap -->
-        <div class="Grid Grid--full u-textCenter wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <img class="shadowFilter modal-target" src="diagram_informationArchitecture.svg"
-                alt="Sitemap">
-            </div>
-          </div>
-        </div>
-        <!-- Sitemap -->
-      </section>
       <section id="userFlow">
         <!-- Arrow -->
         <div class="wrapper">
@@ -1547,7 +1521,34 @@
 
         <!-- user flow -->
       </section>
+      <section id="informationArchitecture">
 
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Information architecture</p>
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHS"></div>
+        <!-- Sitemap -->
+        <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="shadowFilter modal-target" src="diagram_informationArchitecture.svg"
+                alt="Sitemap">
+            </div>
+          </div>
+        </div>
+        <!-- Sitemap -->
+      </section>
 
       <section id="wireframes">
         <!-- Arrow -->
@@ -1556,7 +1557,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Lo-fi Wireframes</p>
+                  <p class="tArrow"> Lo-fi Sketch</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -1569,7 +1570,7 @@
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter modal-target" src="Wireframes.png" alt="Pain points">
+              <img class="shadowFilter modal-target" src="userflow_Sketch.png" alt="Pain points">
             </div>
           </div>
         </div>
